Table builder - text-wrap in fixed layout and introduced default popover for celltypepicker

--- a/assets/reactjs/src/blocks/table/style.scss
+++ b/assets/reactjs/src/blocks/table/style.scss
@@ -117,19 +117,19 @@
       &.cell-placeholder {
         opacity: 0.62;
       }
-      &.align-left{
+      &.align-left {
         text-align: left;
       }
-      &.align-center{
+      &.align-center {
         text-align: center;
       }
-      &.align-right{
+      &.align-right {
         text-align: right;
       }
-      >div{
+      > div {
         display: inline-block;
       }
-      &.hidden-cell{
+      &.hidden-cell {
         display: none;
       }
     }
@@ -356,47 +356,6 @@
         }
       }
     }
-    .qubely-tc-type-changer {
-      position: absolute;
-      left: 0;
-      top: 100%;
-      background: white;
-      width: 370px;
-      display: grid;
-      grid-template-columns: calc(50% - 10px) 50%;
-      padding: 20px;
-      border: 1px solid #dbdfe4;
-      grid-gap: 10px;
-      button {
-        height: 48px;
-        font-size: 16px;
-        line-height: 46px;
-        padding: 0 12px;
-        border: 1px solid #ced6e0;
-        background: #f2f3f7;
-        border-radius: 4px;
-        text-align: left;
-        color: #535f6a;
-        cursor: pointer;
-        i {
-          margin-right: 10px;
-          font-size: 16px;
-          line-height: 48px;
-        }
-        &.active {
-          background: #d2e7ff;
-          border-color: #a9d0ff;
-          color: #2184f9;
-        }
-        &:hover {
-          border-color: #a9d0ff;
-          -webkit-box-shadow: 0 5px 5px -3px rgba(119, 208, 255, 0.2), 0 8px 10px 1px rgba(119, 208, 255, 0.14),
-            0 3px 14px 2px rgba(119, 208, 255, 0.12);
-          box-shadow: 0 5px 5px -3px rgba(119, 208, 255, 0.2), 0 8px 10px 1px rgba(119, 208, 255, 0.14),
-            0 3px 14px 2px rgba(119, 208, 255, 0.12);
-        }
-      }
-    }
   }
   .block-editor-rich-text__editable [data-rich-text-placeholder] {
     //text-transform: capitalize;
@@ -454,13 +413,57 @@
   }
 }
 
-.components-popover.qubely-table-editor{
-  .components-dropdown-menu__menu{
-    button span{
-      &.fas{
+.components-popover.qubely-table-editor {
+  .components-dropdown-menu__menu {
+    button span {
+      &.fas {
         margin-right: 7px;
       }
     }
   }
+}
 
+.qubely-block-table.fixed-width {
+  table .qubely-block-table_cell-content {
+    white-space: pre-wrap;
+    word-break: break-word;
+  }
+}
+.qubely-tc-type-changer {
+  background: white;
+  width: 370px;
+  display: grid;
+  grid-template-columns: calc(50% - 10px) 50%;
+  padding: 20px;
+  border: 1px solid #dbdfe4;
+  grid-gap: 10px;
+  button {
+    height: 48px;
+    font-size: 16px;
+    line-height: 46px;
+    padding: 0 12px;
+    border: 1px solid #ced6e0;
+    background: #f2f3f7;
+    border-radius: 4px;
+    text-align: left;
+    color: #535f6a;
+    cursor: pointer;
+    i {
+      margin-right: 10px;
+      font-size: 16px;
+      line-height: 46px;
+    }
+    &.active {
+      background: #d2e7ff;
+      border-color: #a9d0ff;
+      color: #2184f9;
+    }
+    &:hover {
+      border-color: #a9d0ff;
+      -webkit-box-shadow: 0 5px 5px -3px rgba(119, 208, 255, 0.2), 0 8px 10px 1px rgba(119, 208, 255, 0.14),
+        0 3px 14px 2px rgba(119, 208, 255, 0.12);
+      box-shadow: 0 5px 5px -3px rgba(119, 208, 255, 0.2), 0 8px 10px 1px rgba(119, 208, 255, 0.14),
+        0 3px 14px 2px rgba(119, 208, 255, 0.12);
+    }
+  }
 }
